# celo

./: .gitignore  Cargo.toml  build.zig  build.zig.zon
celo/: Cargo.toml  cli.zig  compiler.zig  main.zig  result.zig
celo-cli/: Cargo.toml
celo-cli/src/: lib.rs
celo/compiler/: Compiler.zig  Lexer.zig  Location.zig  Parser.zig  Source.zig  Token.zig  hir.zig
celo/compiler/hir/: Scope.zig
celo/src/: compiler.rs  lib.rs
celo/src/compiler/: error.rs  hir.rs  lexer.rs  mir.rs  parser.rs  source.rs
maquina/: Cargo.toml
maquina-cli/: Cargo.toml
maquina-cli/src/: lib.rs
